added more test-ng test cases

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b0c3ec">  <td>18/12/29 22:41:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.verifyHomepageTitle()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@313b2ea6]">verifyHomepageTitle</td> 
-  <td>main@2011997442</td>   <td></td> </tr>
+<tr bgcolor="b0c3ec">  <td>18/12/29 23:11:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.goBackToHomepage()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&lt;&lt;goBackToHomepage</td> 
+<td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
+<tr bgcolor="b0c3ec">  <td>18/12/29 23:11:36</td>   <td>1467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.goBackToHomepage()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&lt;&lt;goBackToHomepage</td> 
+<td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
+<tr bgcolor="b0c3ec">  <td>18/12/29 23:11:28</td>   <td>-6027</td> <td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.launchBrowser()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
+<tr bgcolor="b0c3ec">  <td>18/12/29 23:11:34</td>   <td>-747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.register()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">register</td> 
+  <td>main@1374754488</td>   <td></td> </tr>
+<tr bgcolor="b0c3ec">  <td>18/12/29 23:11:35</td>   <td>761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.support()[pri:1, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">support</td> 
+  <td>main@1374754488</td>   <td></td> </tr>
+<tr bgcolor="b0c3ec">  <td>18/12/29 23:11:37</td>   <td>2114</td> <td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.terminateBrowser()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&lt;&lt;terminateBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
+<tr bgcolor="b0c3ec">  <td>18/12/29 23:11:34</td>   <td>-752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.verifyHomepageTitle()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&gt;&gt;verifyHomepageTitle</td> 
+<td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
+<tr bgcolor="b0c3ec">  <td>18/12/29 23:11:35</td>   <td>756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.verifyHomepageTitle()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&gt;&gt;verifyHomepageTitle</td> 
+<td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
 </table>
