--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b0c3ec">  <td>18/12/30 22:53:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.launchBrowser()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
-<tr bgcolor="b0c3ec">  <td>18/12/30 22:53:55</td>   <td>5713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.verifyHomepageTitle()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&gt;&gt;verifyHomepageTitle</td> 
-<td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
-<tr bgcolor="b0c3ec">  <td>18/12/30 22:53:55</td>   <td>5724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.register()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">register</td> 
-  <td>main@1374754488</td>   <td></td> </tr>
-<tr bgcolor="b0c3ec">  <td>18/12/30 22:53:56</td>   <td>6779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.goBackToHomepage()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&lt;&lt;goBackToHomepage</td> 
-<td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
-<tr bgcolor="b0c3ec">  <td>18/12/30 22:53:57</td>   <td>7640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.verifyHomepageTitle()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&gt;&gt;verifyHomepageTitle</td> 
-<td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
-<tr bgcolor="b0c3ec">  <td>18/12/30 22:53:57</td>   <td>7646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.support()[pri:1, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">support</td> 
-  <td>main@1374754488</td>   <td></td> </tr>
-<tr bgcolor="b0c3ec">  <td>18/12/30 22:53:58</td>   <td>8710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.goBackToHomepage()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&lt;&lt;goBackToHomepage</td> 
-<td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
-<tr bgcolor="b0c3ec">  <td>18/12/30 22:53:59</td>   <td>9667</td> <td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.terminateBrowser()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@7748410a]">&lt;&lt;terminateBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>19/01/09 22:05:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.launchBrowser()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>19/01/09 22:05:55</td>   <td>6032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.verifyHomepageTitle()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&gt;&gt;verifyHomepageTitle</td> 
+<td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>19/01/09 22:05:55</td>   <td>6037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.register()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">register</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>19/01/09 22:05:56</td>   <td>7081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.goBackToHomepage()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&lt;&lt;goBackToHomepage</td> 
+<td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>19/01/09 22:05:57</td>   <td>7968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.verifyHomepageTitle()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&gt;&gt;verifyHomepageTitle</td> 
+<td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>19/01/09 22:05:57</td>   <td>7978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.support()[pri:1, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">support</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>19/01/09 22:05:58</td>   <td>8759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.goBackToHomepage()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&lt;&lt;goBackToHomepage</td> 
+<td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>19/01/09 22:05:59</td>   <td>9440</td> <td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.terminateBrowser()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&lt;&lt;terminateBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
 </table>
